--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           At the end of the day, you
           will always be my girl and  <b>I am in love with you</b>  So, here I am, asking you from the deepest
           corner of my heart: Will you let me spend the days ahead loving you
-          making them most?
+          and making the most of them?
         </p>
         <p style="text-align: right; margin-top: 20px">
           Forever yours,<br />Tejas
